# python-distributed

./: Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  requests..http  requests.http
nginx/: nginx.conf
nginx/static/: index.html
src/: config.py  gunicorn.conf.py  server.py  worker.py
