[tool.poetry]
name = "python-distributed"
version = "0.1.0"
description = ""
authors = ["Daniel Hatas <samson84@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.6"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
