[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Daniel Hatas <samson84@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.6"
flask = "^3.0.0"
pymongo = "^4.6.1"
flower = "^2.0.1"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
